--- a/cloudfoundry-runtime/pom.xml
+++ b/cloudfoundry-runtime/pom.xml
@@ -2,28 +2,28 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.cloudfoundry</groupId>
-	<artifactId>cloudfoundry-runtime</artifactId>
+	<groupId>com.rakuten.rpaas</groupId>
+	<artifactId>rpaas-java-runtime</artifactId>
 	<packaging>jar</packaging>
 	<name>Cloud Foundry Runtime for Java/Spring</name>
-	<version>0.8.3.BUILD-SNAPSHOT</version>
+	<version>0.8.2.rpaas.2-SNAPSHOT</version>
 	<properties>
 		<java.version>1.6</java.version>
-		
+
 		<spring.version>3.0.7.RELEASE</spring.version>
-		
+
 		<tomcat.version>6.0.29</tomcat.version>
-		
+
 		<spring.amqp.version>1.1.1.RELEASE</spring.amqp.version>
 		<spring-data-redis.version>1.0.1.RELEASE</spring-data-redis.version>
 		<spring-data-mongo.version>1.0.2.RELEASE</spring-data-mongo.version>
-		
+
 		<commons-logging.version>1.1.1</commons-logging.version>
 		<jackson.version>1.9.8</jackson.version>
 		<mysql-driver.version>5.0.5</mysql-driver.version>
 		<postgres-driver.version>9.0-801.jdbc4</postgres-driver.version>
 		<common-dbcp.version>1.3</common-dbcp.version>
-		
+
 		<junit.version>4.8.2</junit.version>
 		<mockito.version>1.8.5</mockito.version>
 	</properties>
@@ -44,10 +44,10 @@
 		</dependency>
 
 		<dependency>
-		  <groupId>commons-logging</groupId>
-		  <artifactId>commons-logging</artifactId>
-		  <version>${commons-logging.version}</version>
-		  <scope>provided</scope>
+			<groupId>commons-logging</groupId>
+			<artifactId>commons-logging</artifactId>
+			<version>${commons-logging.version}</version>
+			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
@@ -137,55 +137,54 @@
 			<scope>provided</scope>
 		</dependency>
 
-    <dependency>
-        <groupId>commons-dbcp</groupId>
-        <artifactId>commons-dbcp</artifactId>
-        <version>${common-dbcp.version}</version>
-        <scope>provided</scope>
-        <exclusions>
-            <exclusion>
-                <groupId>commons-logging</groupId>
-                <artifactId>commons-logging</artifactId>
-            </exclusion>
-            <exclusion>
-                <groupId>commons-pool</groupId>
-                <artifactId>commons-pool</artifactId>
-            </exclusion>
-            <exclusion>
-                <groupId>xerces</groupId>
-                <artifactId>xerces</artifactId>
-            </exclusion>
-            <exclusion>
-                <groupId>xerces</groupId>
-                <artifactId>xercesImpl</artifactId>
-            </exclusion>
-            <exclusion>
-                <groupId>xml-apis</groupId>
-                <artifactId>xml-apis</artifactId>
-            </exclusion>
-        </exclusions>
-    </dependency>
+		<dependency>
+			<groupId>commons-dbcp</groupId>
+			<artifactId>commons-dbcp</artifactId>
+			<version>${common-dbcp.version}</version>
+			<scope>provided</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>commons-logging</groupId>
+					<artifactId>commons-logging</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>commons-pool</groupId>
+					<artifactId>commons-pool</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>xerces</groupId>
+					<artifactId>xerces</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>xerces</groupId>
+					<artifactId>xercesImpl</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>xml-apis</groupId>
+					<artifactId>xml-apis</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
 
-	<!-- Test -->
-	<dependency>
-		<groupId>junit</groupId>
-		<artifactId>junit</artifactId>
-		<version>${junit.version}</version>
-		<scope>test</scope>
-	</dependency>
-	<dependency>
-		<groupId>org.mockito</groupId>
-		<artifactId>mockito-all</artifactId>
-		<version>${mockito.version}</version>
-		<scope>test</scope>
-	</dependency>
-	<dependency>
-		<groupId>org.springframework</groupId>
-		<artifactId>spring-test</artifactId>
-		<version>${spring.version}</version>
-		<scope>test</scope>
-	</dependency>
-
+		<!-- Test -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>${junit.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+			<version>${mockito.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>${spring.version}</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 	<repositories>
 		<!-- For testing against latest Spring snapshots -->
